--- a/hubot.conf.dist
+++ b/hubot.conf.dist
@@ -1,5 +1,1 @@
-export HUBOT_XMPP_USERNAME="hubot@team.xmpp.slack.com"
-export HUBOT_XMPP_PASSWORD="team.pass"
-export HUBOT_XMPP_ROOMS="general@conference.team.xmpp.slack.com,devops@conference.team.xmpp.slack.com"
-export HUBOT_XMPP_HOST="team.xmpp.slack.com"
-export HUBOT_XMPP_PORT=5222
+export HUBOT_SLACK_TOKEN=your-token-here
