--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hubot-help": "^0.1.1",
     "hubot-karma-classic": "^1.0.2",
     "hubot-maps": "0.0.2",
+    "hubot-pubsub": "^1.0.2",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
