--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "Hostinger Bot",
   "dependencies": {
     "hubot": "^2.13.2",
+    "hubot-alias": "^0.1.7",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.1.5",
     "hubot-google-translate": "^0.2.0",
