Update dist config file

--- a/hubot.conf.dist
+++ b/hubot.conf.dist
@@ -1,3 +1,5 @@
 export HUBOT_SLACK_TOKEN=your-token-here
-export HUBOT_UPTIMEROBOT_APIKEY=api-key-here
+export HUBOT_JENKINS_URL=""
+export HUBOT_JENKINS_AUTH=""
 export HUBOT_SUBSCRIPTIONS_PASSWORD="key"   # Optional password for protecting HTTP API calls
+export HUBOT_PUBSUB_SEND_EVENT_NAME=0
