--- a/package.json
+++ b/package.json
@@ -6,21 +6,12 @@
   "description": "Hostinger Bot",
   "dependencies": {
     "hubot": "^2.13.2",
-    "hubot-alias": "^0.1.7",
-    "hubot-diagnostics": "0.0.1",
-    "hubot-google-images": "^0.1.5",
-    "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.1.1",
     "hubot-karma-classic": "^1.0.2",
-    "hubot-maps": "0.0.2",
     "hubot-pubsub": "^1.0.2",
-    "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
-    "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.1",
-    "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.3.0",
-    "hubot-uptimerobot": "0.0.3"
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
     "node": "0.10.x"
