--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "hubot-pubsub": "^1.0.2",
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.16.1",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^3.3.0",
+    "amqp": "^0.2.4"
   },
   "engines": {
     "node": "0.10.x"
