--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.16.1",
     "hubot-slack": "^3.3.0",
-    "amqp": "^0.2.4"
+    "amqp": "^0.2.4",
+    "hubot-auth": "^1.2.0"
   },
   "engines": {
     "node": "0.10.x"
