Revert "Add asana dependency"
This reverts commit bb7d0f187fa2fb6d031429a8b9acf9df37777400.

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "amqp": "^0.2.4",
     "hubot-auth": "^1.2.0",
     "hubot-xmpp": "^0.1.16",
-    "hubot-nagios": "0.0.2",
-    "hubot-asana": "^1.0.1"
+    "hubot-nagios": "0.0.2"
   },
   "engines": {
     "node": "0.10.x"
