--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "amqp": "^0.2.4",
     "hubot-auth": "^1.2.0",
     "hubot-xmpp": "^0.1.16",
-    "hubot-nagios": "0.0.2"
+    "hubot-nagios": "0.0.2",
+    "hubot-reactions":"^1.0.4"
   },
   "engines": {
     "node": "0.10.x"
