--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "author": "Hubot <hubot@hostinger.com>",
   "description": "Hostinger Bot",
   "dependencies": {
+    "amqp": "^0.2.4",
     "hubot": "^2.13.2",
+    "hubot-auth": "^1.2.0",
+    "hubot-bookmark": "0.0.4",
     "hubot-help": "^0.1.1",
     "hubot-karma-classic": "^1.0.2",
+    "hubot-nagios": "0.0.2",
     "hubot-pubsub": "^1.0.2",
+    "hubot-reactions": "^1.0.4",
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.16.1",
     "hubot-slack": "^3.3.0",
-    "amqp": "^0.2.4",
-    "hubot-auth": "^1.2.0",
-    "hubot-xmpp": "^0.1.16",
-    "hubot-nagios": "0.0.2",
-    "hubot-reactions":"^1.0.4"
+    "hubot-xmpp": "^0.1.16"
   },
   "engines": {
     "node": "0.10.x"
