add links which auto stores all links instead of bookmarks

--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "amqp": "^0.2.4",
     "hubot": "^2.13.2",
     "hubot-auth": "^1.2.0",
-    "hubot-bookmark": "0.0.4",
     "hubot-help": "^0.1.1",
     "hubot-karma-classic": "^1.0.2",
+    "hubot-links": "0.0.1",
     "hubot-nagios": "0.0.2",
     "hubot-pubsub": "^1.0.2",
     "hubot-reactions": "^1.0.4",
