--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hubot-reactions": "^1.0.4",
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.16.1",
+    "hubot-simple-logger": "git+https://github.com/anarcher/hubot-simple-logger.git",
     "hubot-slack": "^3.3.0",
     "hubot-xmpp": "^0.1.16"
   },
