--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hubot-redis-brain": "0.0.3",
     "hubot-scripts": "^2.16.1",
     "hubot-simple-logger": "git+https://github.com/anarcher/hubot-simple-logger.git",
+    "hubot-hostinger": "git+https://github.com/hostinger/hubot-hostinger.git#0.0.1",
     "hubot-slack": "^3.3.0",
     "hubot-xmpp": "^0.1.16"
   },
