--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "hubot-scripts": "^2.16.1",
     "hubot-simple-logger": "git+https://github.com/anarcher/hubot-simple-logger.git",
     "hubot-hostinger": "git+https://github.com/hostinger/hubot-hostinger.git#b8ffe84",
-    "hubot-xmpp": "0.2.1",
-    "hubot-chef": "2.7.0"
+    "hubot-chef": "2.7.0",
+    "hubot-slack": "^3.4.2"
   },
   "engines": {
     "node": "0.10.x"
