Change adapter to XMPP back

--- a/package.json
+++ b/package.json
@@ -5,19 +5,19 @@
   "author": "Hubot <hubot@hostinger.com>",
   "description": "Hostinger Bot",
   "dependencies": {
-    "hubot": "^2.13.2",
-    "hubot-help": "^0.1.1",
+    "hubot": "^2.18.0",
+    "hubot-help": "^0.1.2",
     "hubot-karma-classic": "^1.0.2",
     "hubot-links": "0.0.1",
     "hubot-nagios": "0.0.2",
     "hubot-pubsub": "^1.0.2",
     "hubot-redis-brain": "0.0.3",
-    "hubot-scripts": "^2.16.1",
+    "hubot-scripts": "^2.16.2",
     "hubot-simple-logger": "git+https://github.com/anarcher/hubot-simple-logger.git",
     "hubot-hostinger": "git+https://github.com/hostinger/hubot-hostinger.git#b8ffe84",
-    "hubot-awex": "git+https://github.com/hostinger/hubot-awex.git#b3d29aa98c84127ec4aaf310019cc3b07fe9a401",
+    "hubot-awex": "git+https://github.com/hostinger/hubot-awex.git#23ba6a0bcf12914e7f748b87cf547c2df4fc742b",
     "hubot-chef": "2.7.0",
-    "hubot-slack": "4.0.4"
+    "hubot-xmpp": "0.2.4"
   },
   "engines": {
     "node": "0.10.x"
