Add hubot-standup-alarm plugin

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "hubot-simple-logger": "git+https://github.com/anarcher/hubot-simple-logger.git",
     "hubot-hostinger": "git+https://github.com/hostinger/hubot-hostinger.git#b8ffe84",
     "hubot-chef": "2.7.0",
-    "hubot-slack": "^3.4.2"
+    "hubot-slack": "^3.4.2",
+    "hubot-standup-alarm": "*"
   },
   "engines": {
     "node": "0.10.x"
