--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hubot-scripts": "^2.16.1",
     "hubot-simple-logger": "git+https://github.com/anarcher/hubot-simple-logger.git",
     "hubot-hostinger": "git+https://github.com/hostinger/hubot-hostinger.git#b8ffe84",
+    "hubot-awex": "git+https://github.com/hostinger/hubot-awex.git#b3d29aa98c84127ec4aaf310019cc3b07fe9a401",
     "hubot-chef": "2.7.0",
     "hubot-slack": "^3.4.2"
   },
